--- a/ddddddddd/css/main.css
+++ b/ddddddddd/css/main.css
@@ -3,33 +3,41 @@
 }
 
 #header {
-  background-color: white;
+  background-color: #fff;
   float: left;
   width: 1200px;
-  height: 100px;
+  height: 50px;
 }
 
+#nav {
+  position: absolute;
+  height: 60px;
+ margin-top: -20px;
+ margin-left: 1000px;
+}
 #left {
-  background-color: white;
+  background-color:#fff);
   float: left;
-  width: 500px;
-  height: 700px;
+  width: 200px;
+  height: 660px;
 }
 
 #content {
-  background: white;
+  background: #fff;
   float: left;
-  width: 700px;
-  height: 700px;
+  width: 1000px;
+  height: 660px;
 }
 
 #footer {
   background: rgba(161, 211, 255, 0.9);
-  clear: both;
+  position: relative;
   width: 1200px;
   height: 70px;
+  margin-top: 20px;
+  margin-left: -200px;
 }
-
+/*슬라이드------------------------------------------*/
 .slider {
   width: 480px;
   height: 640px;
@@ -119,182 +127,107 @@ ul.imgs li {
   z-index: 1;
 }
 
+/*슬라이드------------------------------------------*/
+
 .logo {
-  margin-left: 50px;
+  margin-left: 0px;
   margin-top: 0px;
 }
 
-.gnb {
-  position: absolute;
-  top: -80px;
-  right: 0px;
-  /* 부모는? 싸고있는 .pbx.prt */
-  width: 600px;
-  height: 50px;
-  background-color: rgb(255, 255, 255);
-}
-.gnb li {
-  width: 200px;
-  /* height: 50px; */
-  /* li의 높이값을 안주면 a에 설정된 줄간격이 높이값이됨! */
-}
-.gnb a {
-  display: block;
-  width: 100%;
-  height: 100%;
-
-  /* 글자설정 */
-  font-size: 20px;
-  font-weight: bold;
-  line-height: 50px;
-  text-align: center;
-}
-/* 서브메뉴 */
-.gnb ol {
-  height: 0; /* 200px; */
-  background-color: rgba(161, 211, 255, 0.9);
-  overflow: hidden; /* 숨기기 */
-  transition: height 0.4s;
-}
-/* .gnb에 마우스 오버시 서브메뉴 모두 나타나기 */
-.gnb:hover ol {
-  height: 170px;
-  /* 줄간격 40px * 4 = 160px + 여유공간*/
-}
-/* 서브메뉴 a */
-.gnb ol a {
-  font-size: 16px;
-  line-height: 40px;
-}
-
-/* 하이라이트 설정 */
-/* 상위,하위메뉴 */
-.gnb li:hover > a {
-  color: rgb(0, 94, 255);
-}
-/* 하위메뉴 */
-.gnb ol li:hover a {
-  background-color: rgb(227, 245, 176);
-}
-
-
-.cont {
-  position: absolute;
-  top : 100px
-  left : 100px
-  height : 100px;
-  background-color: rgb(179, 218, 255);
-}
-/* 파티션가로값 (한꺼번에 등분할!) */
-.cont > .pbx {
-  float: left;
-  width: 400px;
-}
-
-/* 탭메뉴 */
-.tm {
-  width: 200px;
-  height: 40px;
-}
-.tm li a {
-  display: block;
-  width: 100px;
-  text-align: center;
-  line-height: 40px;
-  background-color: rgb(94, 169, 255);
-}
-/* 선택된 탭class */
-.tm li.on a {
-  background-color: #fff;
-}
-
-/* 탭내용박스 */
-.tc {
-  position: absolute;
-  height: 138px;
-  background-color: #fff;
-}
-/* 탭내용박스 li - 2개 */
-.tc > li {
-  width: 100%;
-  height: 100%;
-  display: none; /* 모두안보임 */
-}
-/* 선택된 탭내용박스 li 클래스 */
-.tc > li.on {
-  display: block;
-}
-
-/* 공지사항 리스트박스 */
-.gong {
-  padding-top: 9px;
-  padding-left: 7px;
-}
-.gong li {
-  float: none;
-  line-height: 24px;
-}
-.gong a {
-  display: inline-block;
-  /* 줄안바뀌면서 width디자인 적용위해 */
-  width: 270px;
-
-  /* 아래 3가지로 한줄짜리 말줄임표시하기 */
-  white-space: nowrap;
-  /* 1.줄바꿈방지 */
-  overflow: hidden;
-  /* 2.넘치는 글자숨기기 */
-  text-overflow: ellipsis;
-  /* 3.텍스트 말줄임표시 */
-}
-
-/* 날짜표시 오른쪽끝으로 */
-.gong span {
-  float: right;
-  padding-right: 5px;
-}
-
-/* 갤러리 리스트박스 */
-.gal li {
-  margin: 18px 12px;
-}
-.gal img {
-  width: 100px;
-  border: 1px solid #777;
-}
-
-/* 팝업창 */
-.pop {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 350px;
-  padding: 15px;
-  z-index: 999;
-  background-color: #fff;
-  border: 3px solid #888;
-  display: none; /* 처음에 안보임! */
-}
-.pop h1 {
-  /* 팝업제목 */
-  font-size: 24px;
-  text-align: center;
-}
-.pop p {
-  /* 팝업내용문단 */
-  line-height: 30px;
-}
-/* 닫기버튼박스 */
-.bbx {
-  text-align: right;
-  /* button요소는 inline-block이므로 
-    인라인처럼 텍스트정렬이 적용된다! */
-}
-
-/* 배너, 바로가기 이미지 공통 */
+/* 배너, 바로가기 이미지 공통 -----------------------*/
 .im {
   width: 100%;
   height: 100%;
 }
+/* 배너, 바로가기 이미지 공통 ----------------------- */
 
+/*menu bar----------------------------------------*/
+
+* {
+  padding: 0;
+  margin: 0;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: dotted;
+  font-size: 18px;
+}
+
+.menu {
+  width: 200px;
+  overflow: hidden;
+  margin: 150px auto;
+}
+
+.menu > li {
+  width: 100%; /*20*5=100%*/
+
+  text-align: center;
+  line-height: 40px;
+  background-color: #fff;
+}
+
+.menu a {
+  color: black;
+}
+
+.submenu > li {
+  line-height: 50px;
+  background-color: #94a9ff;
+}
+
+.submenu {
+  height: 0; /*ul의 높이를 안보이게 처리*/
+  overflow: hidden;
+}
+
+.menu > li:hover {
+  background-color: #94a9ff;
+  transition-duration: 0.5s;
+}
+
+.menu > li:hover .submenu {
+  height: 250px; /*서브메뉴 li한개의 높이 50*5*/
+  transition-duration: 1s;
+}
+
+.menu li:hover > a {
+  color: #fff;
+}
+/* 하위메뉴 */
+.menu li ul:hover a {
+}
+
+/*로그인------------------------------------------*/
+
+.main {
+  width: 250px;
+  height: 100px;
+  float: right;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+}
+
+
+#login {
+  width: 68%;
+  background-color: skyblue;
+  border-color: transparent;
+  color: white;
+}
+
+.account {
+  display: block;
+  margin-bottom: 3px;
+  padding: 3px;
+  border: 1px solid lightgray;
+  border-radius: 3px;
+}
+
+#alert {
+  border-color: transparent;
+}
